--- a/.github/workflows/whatsapp-push-notify-action.yml
+++ b/.github/workflows/whatsapp-push-notify-action.yml
@@ -10,7 +10,7 @@ jobs:
           account_sid: ACeb1c5da77e40e019172a5f5242ea98d6
           auth_token: e19082032f2e4dc9255662669c2dc1bd
           to_whatsapp_no: +6285273864767
-          message: ANJING LAGI JALAN
+          message: new commit
 
 
         uses: khaled-ibtikar/whatsapp-push-notify-action@master
